# void_credit_retrieval_project

./: .augment-guidelines  .env.example  .gitignore  DEPLOYMENT_UPDATE_SUMMARY.md  README.md  pyproject.toml  run_with_xvfb.sh  test_company_account.md
deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_FILES_SUMMARY.md  PIPELINE_ERROR_HANDLING.md  PIPELINE_OVERVIEW.md  README.md  connect_to_vm.bat  run_setup_commands.bat  setup_vm_remote.bat  setup_vm_step_by_step.ps1  vm_setup.sh
docs/: CREDENTIAL_ROTATION_IMPLEMENTATION.md  DATE_STANDARDIZATION_SUMMARY.md  DEMO_COMPARISON.md  DOCS_CLEANUP_SUMMARY.md  EXACT_DATE_PIPELINE_CHANGES.md  FINAL_VOID_IMPLEMENTATION_SUMMARY.md  GCS_UPLOAD_SETUP.md  GOOGLE_CLOUD_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LINUX_DEPLOYMENT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_85_89_DAYS.md  README_17Track_Demo.md  README_17Track_Integration.md  README_Automated_Void_Analyzer.md  README_Clean_17Track.md  README_PeerDB_Pipeline.md  README_UPS_Label_Only_Filter.md  README_UPS_Web_Login.md  README_Void_Analysis.md  SECURITY_SETUP.md  SETUP_COMPLETE_SUMMARY.md  SHIPPING_HISTORY_AUTOMATION_COMPLETE.md  SLACK_IP_WHITELISTING.md  SLACK_IP_WHITELISTING_QUICK_REF.md  SLACK_IP_WHITELISTING_READY.md  SLACK_IP_WHITELISTING_SETUP.md  UPS_CREDENTIAL_ROTATION.md  UPS_LABEL_ONLY_FILTER.md  UPS_WEB_LOGIN_CHEATSHEET.md  UPS_WEB_LOGIN_IMPLEMENTATION.md  UPS_WEB_LOGIN_QUICKSTART.md  VOID_SHIPMENT_COMPLETE.md  WORKFLOW_85_89_DAYS.md  WORKFLOW_CLARIFICATION.md  WORKFLOW_DOCUMENTATION.md  WORKFLOW_SUMMARY.md
examples/: ups_api.py  (+6 more)
(+107 files in other folders)
